--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -1,9 +1,9 @@
 @import '~base-scss/base';
 
 .dashboard {
+    @extend %main-content;
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 
     .content {
         display: flex;
