Add barchart in dashboard

--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -17,5 +17,10 @@
             display: flex;
             flex-grow: 1;
         }
+
+        .barchart {
+            display: flex;
+            flex-grow: 1;
+        }
     }
 }
