Add marker for project in report

--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -38,6 +38,7 @@
 
             .horizontal-bar-container {
                 display: flex;
+                flex-direction: row;
                 flex-grow: 1;
                 padding: $spacing-large;
 
