--- a/client/src/components/Navbar/styles.scss
+++ b/client/src/components/Navbar/styles.scss
@@ -11,4 +11,12 @@ $color-text-on-primary: get-text-color($color-primary);
     background-color: $color-navbar;
     padding: 0 $spacing-medium-alt;
     color: $color-text-on-navbar;
+
+    .header {
+        margin: auto;
+        width: 80%;
+        text-transform: uppercase;
+        font-size: $font-size-large;
+        font-weight: $font-weight-bold;
+    }
 }
