--- a/client/src/stylesheets/_dimens.scss
+++ b/client/src/stylesheets/_dimens.scss
@@ -34,6 +34,7 @@ $spacing-extra-large: 26px;
 $spacing-extra-large-alt: 30px;
 $spacing-super-large: 36px;
 $spacing-super-large-alt: 42px;
+$spacing-super-duper-large: 96px;
 
 $spacing-default: $spacing-medium;
 
