--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -4,7 +4,7 @@
     @extend %main-content;
     margin: auto;
     border: 0;
-    width: 80%;
+    width: 70%;
 
     .content {
         display: flex;
@@ -23,15 +23,15 @@
             .map {
                 margin-bottom: $spacing-small;
                 border: $width-separator-thin solid $color-separator;
-                height: 60%;
+                height: 60vh;
             }
 
             .barchart-container {
                 display: flex;
                 margin: $spacing-small 0;
                 border: $width-separator-thin solid $color-separator;
-                padding: $spacing-medium $spacing-large;
-                height: 40%;
+                padding: $spacing-super-large-alt $spacing-large;
+                height: 40vh;
 
                 .barchart {
                     flex-grow: 1;
