--- a/client/src/components/KeyValue/styles.scss
+++ b/client/src/components/KeyValue/styles.scss
@@ -7,6 +7,7 @@
     .title {
         display: table-cell;
         padding: $spacing-small $spacing-medium;
+        text-transform: capitalize;
     }
 
     .value {
