--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -1,10 +1,12 @@
 @import '~base-scss/base';
 
+$width-aggregated-data: 480px;
+
 .dashboard {
     @extend %main-content;
     margin: auto;
     border: 0;
-    width: 70%;
+    width: 100%;
 
     .content {
         display: flex;
@@ -16,26 +18,44 @@
 
         .dashboard-content {
             display: flex;
-            flex-direction: column;
             width: 100%;
             height: 100%;
 
-            .map {
-                margin-bottom: $spacing-small;
-                border: $width-separator-thin solid $color-separator;
-                height: 60vh;
+            .map-container {
+                position: relative;
+                width: calc(100% - #{$width-aggregated-data});
+                height: 100%;
+
+                .map {
+                    margin-bottom: $spacing-small;
+                    border: $width-separator-thin solid $color-separator;
+                    height: 100%;
+                }
+
+                .hover-info {
+                    @include shadow-medium;
+                    border: $width-separator-thin solid $color-separator;
+                    background-color: $color-foreground;
+
+                    h4 {
+                        border-bottom: $width-separator-thin solid $color-separator;
+                        padding: $spacing-small $spacing-medium;
+                        text-transform: capitalize;
+                        color: $color-accent;
+                        font-size: $font-size-large;
+                        font-weight: $font-weight-bold;
+                    }
+
+                    .rc-data-hover {
+                        display: table;
+                        border-collapse: collapse;
+                    }
+                }
             }
 
-            .barchart-container {
-                display: flex;
-                margin: $spacing-small 0;
+            .aggregated-container {
                 border: $width-separator-thin solid $color-separator;
-                padding: $spacing-super-large-alt $spacing-large;
-                height: 40vh;
-
-                .barchart {
-                    flex-grow: 1;
-                }
+                width: $width-aggregated-data;
             }
         }
     }
