--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -14,6 +14,12 @@
         border-bottom: $width-separator-thin solid $color-separator;
         background-color: $color-background-header;
         padding: $spacing-small $spacing-medium;
+
+        h2 {
+            color: $color-accent;
+            font-size: $font-size-super-large;
+            font-weight: bold;
+        }
     }
 
     .container {
@@ -115,8 +121,27 @@
 
                 .table {
                     display: table;
+                    flex-grow: 1;
                     margin-top: $spacing-medium;
                     border-collapse: collapse;
+
+                    .flash-data {
+                        color: $color-danger;
+                    }
+                }
+
+                .viz-wrapper-wrapper {
+                    display: flex;
+
+                    .table {
+                        flex-grow: 1;
+                    }
+
+                    .viz-wrapper {
+                        display: flex;
+                        align-items: center;
+                        flex-direction: column;
+                    }
                 }
             }
         }
