--- a/client/src/stylesheets/_base.scss
+++ b/client/src/stylesheets/_base.scss
@@ -2,7 +2,7 @@
 @import 'dimens';
 @import 'utils';
 
-$font-family-sans-serif: 'Source Sans Pro', sans-serif;
+$font-family-sans-serif: 'Lato', sans-serif;
 $font-family-monospace: 'Oxygen Mono', monospace;
 $font-family-icons: 'Ionicons';
 
