--- a/client/src/views/Dashboard/Summary/styles.scss
+++ b/client/src/views/Dashboard/Summary/styles.scss
@@ -8,12 +8,13 @@
     .header {
         flex-shrink: 0;
         border-bottom: $width-separator-thin solid $color-separator;
-        padding: $spacing-small $spacing-medium;
+        background: $color-accent;
+        padding: $spacing-medium;
 
         h2 {
             text-transform: capitalize;
-            color: $color-accent;
-            font-weight: $font-weight-bold;
+            color: $color-foreground;
+            font-weight: $font-weight-medium;
         }
     }
 
@@ -21,15 +22,26 @@
         flex-grow: 1;
         overflow-y: auto;
 
+        .tooltip {
+            .value {
+                font-family: $font-family-monospace;
+            }
+        }
+
         .info {
             display: inline-block;
             border-bottom: $width-separator-thin solid $color-separator;
             background-color: $color-background-header;
-            padding: $spacing-medium;
+            padding: $spacing-medium-alt $spacing-medium;
             line-height: 1.3;
             color: $color-text-label;
             font-size: $font-size-medium-alt;
             font-style: italic;
+
+            .info-icon {
+                padding-right: $spacing-small;
+                color: $color-info;
+            }
 
             .date {
                 padding: 0 $spacing-extra-small-alt;
@@ -41,7 +53,7 @@
         }
 
         .item {
-            padding-bottom: $spacing-large;
+            padding: $spacing-medium-alt $spacing-small;
             width: 100%;
 
             h3 {
@@ -66,6 +78,7 @@
                 }
 
                 .viz {
+                    margin-left: -$spacing-medium;
                     width: 180px;
                 }
             }
