--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -55,6 +55,22 @@
                 display: table;
                 border-collapse: collapse;
             }
+
+            .tables {
+                display: flex;
+                flex-direction: column;
+                overflow-y: auto;
+
+                .heading {
+                    color: $color-accent;
+                }
+
+                .table {
+                    display: table;
+                    flex-shrink: 0;
+                    border-collapse: collapse;
+                }
+            }
         }
 
         .lower-container {
