--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -7,6 +7,36 @@
     width: 100%;
     height: 100%;
 
+    &.no-region-found {
+        align-items: center;
+        justify-content: center;
+
+        .heading {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            color: $color-text;
+            font-size: $font-size-super-large;
+            font-weight: $font-weight-medium;
+
+            .go-back {
+                outline: none;
+                border: 0;
+                background-color: transparent;
+                cursor: pointer;
+                padding-top: $spacing-large;
+                text-transform: capitalize;
+                text-decoration: none;
+                line-height: 0.9;
+                color: inherit;
+                color: $color-accent;
+                font-family: inherit;
+                font-size: $font-size-extra-large;
+                font-weight: $font-weight-normal;
+            }
+        }
+    }
+
     .header {
         display: flex;
         align-items: center;
@@ -15,10 +45,26 @@
         background-color: $color-foreground;
         padding: $spacing-small $spacing-medium;
 
-        h2 {
+        .heading {
+            display: flex;
+            align-items: center;
             color: $color-accent;
-            font-size: $font-size-super-large;
+            font-size: $font-size-extra-large;
             font-weight: $font-weight-medium;
+
+            .go-back {
+                outline: none;
+                border: 0;
+                background-color: transparent;
+                cursor: pointer;
+                text-transform: capitalize;
+                text-decoration: none;
+                line-height: 0.9;
+                color: inherit;
+                font-family: inherit;
+                font-size: $font-size-extra-large;
+                font-weight: $font-weight-normal;
+            }
         }
     }
 
