--- a/client/src/views/Dashboard/Summary/styles.scss
+++ b/client/src/views/Dashboard/Summary/styles.scss
@@ -12,7 +12,7 @@
         padding: $spacing-medium;
 
         h2 {
-            text-transform: capitalize;
+            text-transform: none;
             color: $color-foreground;
             font-weight: $font-weight-medium;
         }
