Remove correspondences that are 0

--- a/client/src/stylesheets/_dimens.scss
+++ b/client/src/stylesheets/_dimens.scss
@@ -24,6 +24,7 @@ $font-weight-default: $font-weight-medium;
 $spacing-super-small: 1px;
 $spacing-extra-small: 2px;
 $spacing-extra-small-alt: 3px;
+$spacing-smaller: 4px;
 $spacing-small: 6px;
 $spacing-small-alt: 8px;
 $spacing-medium: 10px;
