--- a/client/src/components/KeyValue/styles.scss
+++ b/client/src/components/KeyValue/styles.scss
@@ -29,7 +29,7 @@
         }
 
         .percent-value {
-            color: $color-text-disabled;
+            opacity: 0.6;
             font-size: $font-size-small-alt;
         }
     }
