Add soi in summary

--- a/client/src/views/Dashboard/Summary/styles.scss
+++ b/client/src/views/Dashboard/Summary/styles.scss
@@ -93,6 +93,10 @@
                 .danger {
                     color: $color-danger;
                 }
+
+                .bold {
+                    font-weight: $font-weight-bold;
+                }
             }
 
             .item-table-viz-alt {
