--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -7,6 +7,7 @@ $width-aggregated-data: 480px;
     margin: auto;
     border: 0;
     width: 100%;
+    height: 100%;
 
     .content {
         display: flex;
