Separate out Map Component from Dashboard

--- a/client/src/views/Dashboard/SummaryContainer/styles.scss
+++ b/client/src/views/Dashboard/SummaryContainer/styles.scss
@@ -12,4 +12,12 @@
     .container {
         height: 100%;
     }
+
+    .tabs {
+        flex-wrap: wrap;
+
+        .tab {
+            flex-grow: 1;
+        }
+    }
 }
