--- a/client/src/components/Navbar/styles.scss
+++ b/client/src/components/Navbar/styles.scss
@@ -1,15 +1,10 @@
-@import '~base-scss/base';
-
-$color-text-on-navbar: get-text-color($color-navbar);
-$color-text-on-primary: get-text-color($color-primary);
-
 .navbar {
     display: flex;
     align-items: center;
-    box-shadow: 0 $spacing-extra-small $spacing-small (-$spacing-extra-small) $color-shadow-medium;
-    background-color: $color-navbar;
-    padding: 0 $spacing-medium-alt;
-    color: $color-text-on-navbar;
+    border-bottom: var(--width-separator-thin) solid var(--color-separator);
+    background-color: var(--color-navbar);
+    padding: 0 var(--spacing-medium-alt);
+    color: var(--color-text-on-navbar);
 
     .header {
         display: flex;
@@ -33,8 +28,8 @@ $color-text-on-primary: get-text-color($color-primary);
             line-height: 0.9;
             color: inherit;
             font-family: inherit;
-            font-size: $font-size-large-alt;
-            font-weight: $font-weight-normal;
+            font-size: var(--font-size-large-alt);
+            font-weight: var(--font-weight-normal);
         }
     }
 }
