--- a/client/src/stylesheets/_base.scss
+++ b/client/src/stylesheets/_base.scss
@@ -1,26 +1,26 @@
-@import 'colors';
-@import 'dimens';
 @import 'utils';
 
-$font-family-sans-serif: 'Lato', sans-serif;
-$font-family-monospace: 'Oxygen Mono', monospace;
-$font-family-icons: 'Ionicons';
+:root {
+    --font-family-sans-serif: 'Lato', sans-serif;
+    --font-family-monospace: 'Oxygen Mono', monospace;
+    --font-family-icons: 'Ionicons';
+}
 
 * {
     box-sizing: border-box;
 
     ::-webkit-scrollbar-track {
-        background-color: $color-background-scrollbar;
+        background-color: var(--color-background-scrollbar);
     }
 
     ::-webkit-scrollbar {
-        background-color: $color-background-scrollbar;
-        width: $width-scrollbar;
-        height: $width-scrollbar;
+        background-color: var(--color-background-scrollbar);
+        width: var(--width-scrollbar);
+        height: var(--width-scrollbar);
     }
 
     ::-webkit-scrollbar-thumb {
-        background-color: $color-foreground-scrollbar;
+        background-color: var(--color-foreground-scrollbar);
     }
 }
 
@@ -37,10 +37,10 @@ $font-family-icons: 'Ionicons';
 body {
     margin: 0;
     padding: 0;
-    color: $color-text;
-    font-family: $font-family-sans-serif;
-    font-size: $font-size-default;
-    font-weight: $font-weight-default;
+    color: var(--color-text);
+    font-family: var(--font-family-sans-serif);
+    font-size: var(--font-size-default);
+    font-weight: var(--font-weight-default);
 
     a {
         outline: none;
@@ -56,22 +56,22 @@ body {
     h5 {
         margin: 0;
         text-transform: uppercase;
-        font-weight: $font-weight-light;
+        font-weight: var(--font-weight-light);
     }
 
     :global {
         .navbar {
             position: relative;
             z-index: 1;
-            height: $height-navbar;
+            height: var(--height-navbar);
         }
 
         .main-content {
             position: relative;
             perspective: 1000px;
-            background-color: $color-foreground;
-            padding: $spacing-small-alt;
-            height: calc(100vh - #{$height-navbar});
+            background-color: var(--color-foreground);
+            padding: var(--spacing-small-alt);
+            height: calc(100vh - var(--height-navbar));
             overflow-y: auto;
         }
 
@@ -85,15 +85,15 @@ body {
 %main-content {
     // @frozenhelium
     transform-origin: bottom;
-    border: $width-separator-thin solid $color-separator-alt;
-    background-color: $color-foreground;
+    border: var(--width-separator-thin) solid var(--color-separator-alt);
+    background-color: var(--color-foreground);
     height: 100%;
-    animation: slide-in $duration-slow ease forwards;
+    animation: slide-in var(--duration-slow) ease forwards;
 }
 
 %accent-color-link {
     text-transform: initial;
-    color: $color-accent;
+    color: var(--color-accent);
 
     &:hover {
         text-decoration: underline;
