--- a/client/src/stylesheets/_utils.scss
+++ b/client/src/stylesheets/_utils.scss
@@ -1,50 +1,45 @@
 @mixin shadow-medium() {
-    box-shadow: 0 $spacing-small $radius-blur-medium $radius-spread-medium $color-shadow-medium;
+    box-shadow: 0 var(--spacing-small) var(--radius-blur-medium) var(--radius-spread-medium) var(--color-shadow-medium);
 }
 
 @mixin shadow-small() {
-    box-shadow: 0 $spacing-extra-small $radius-blur-small $radius-spread-small $color-shadow-medium;
+    box-shadow: 0 var(--spacing-extra-small) var(--radius-blur-small) var(--radius-spread-small) var(--color-shadow-medium);
 }
 
 @mixin shadow-small-upward() {
-    box-shadow: 0 (-$spacing-extra-small) $radius-blur-small $radius-spread-small $color-shadow-medium;
+    box-shadow: 0 (-var(--spacing-extra-small)) var(--radius-blur-small) var(--radius-spread-small) var(--color-shadow-medium);
 }
 
 @mixin shadow-large() {
-    box-shadow: 0 $spacing-small-alt $radius-blur-medium $radius-spread-medium $color-shadow-medium;
+    box-shadow: 0 var(--spacing-small-alt) var(--radius-blur-medium) var(--radius-spread-medium) var(--color-shadow-medium);
 }
 
 @mixin shadow-large-upward() {
-    box-shadow: 0 (-$spacing-small-alt) $radius-blur-medium $radius-spread-medium $color-shadow-medium;
+    box-shadow: 0 (-var(--spacing-small-alt)) var(--radius-blur-medium) var(--radius-spread-medium) var(--color-shadow-medium);
 }
 
 @mixin shadow-large-dark() {
-    box-shadow: 0 $spacing-small-alt $radius-blur-medium $radius-spread-medium $color-shadow-dark;
+    box-shadow: 0 var(--spacing-small-alt) var(--radius-blur-medium) var(--radius-spread-medium) var(--color-shadow-dark);
 }
 
 @mixin shadow-button() {
-    box-shadow: 0 1px 3px -1px $color-shadow-medium;
+    box-shadow: 0 1px 3px -1px var(--color-shadow-medium);
 }
 
 @mixin shadow-button-active() {
-    box-shadow: 0 1px 2px -1px $color-shadow-medium;
+    box-shadow: 0 1px 2px -1px var(--color-shadow-medium);
 }
 
 @mixin transition-slow() {
-    transition: $duration-transition-slow all ease-in-out;
+    transition: var(--duration-transition-slow) all ease-in-out;
 }
 
 @mixin transition-medium() {
-    transition: $duration-transition-medium all ease-in-out;
+    transition: var(--duration-transition-medium) all ease-in-out;
 }
 
 @mixin transition-fast() {
-    transition: $duration-transition-fast all ease-in-out;
-}
-
-@mixin outline-button($background-color) {
-    outline: $width-separator-thin dotted get-text-color($background-color);
-    outline-offset: -$spacing-extra-small-alt;
+    transition: var(--duration-transition-fast) all ease-in-out;
 }
 
 @keyframes spin {
@@ -70,113 +65,20 @@
     @return $x1;
 }
 
-@function get-luminance($color) {
-    $r: red($color);
-    $g: green($color);
-    $b: blue($color);
-    $l: sqrt(.299 * $r * $r + .587 * $g * $g + .114 * $b * $b);
-    @return $l;
-}
-
-@function get-text-color($background-color, $color-for-light: $color-text-on-light, $color-for-dark: $color-text-on-dark) {
-    $l: get-luminance($background-color);
-    @if ($l > 176) {
-        @return $color-for-light;
-    }
-
-    @return $color-for-dark;
-}
-
-@mixin background-color($background-color) {
-    background-color: $background-color;
-    color: get-text-color($background-color);
-}
-
-@mixin background-color-with-label-text($background-color) {
-    background-color: $background-color;
-    color: get-text-color($background-color, $color-text-label-on-light, $color-text-label-on-dark);
-}
-
-@mixin background-color-with-disabled-text($background-color) {
-    background-color: $background-color;
-    color: get-text-color($background-color, $color-text-disabled-on-light, $color-text-disabled-on-dark);
-}
-
-@function get-hover-color($color) {
-    @return darken($color, 10%);
-}
-
 %empty-text {
-    color: $color-text-disabled;
+    color: var(--color-text-disabled);
 }
-
-$radius-button-border: 2px;
 
 %button-like-link {
-    @include background-color($color-foreground);
     @include shadow-button;
     border: 0;
-    border-radius: $radius-button-border;
-    padding: $spacing-small $spacing-small-alt;
+    border-radius: var(--radius-button-border);
+    padding: var(--spacing-small) var(--spacing-small-alt);
     text-transform: uppercase;
     font-family: inherit;
-    font-size: $font-size-small;
+    font-size: var(--font-size-small);
 
     &:active {
         transform: translateY(1px);
-    }
-}
-
-@mixin button-like-link($background-color) {
-    @include shadow-button;
-    @include background-color($background-color);
-    display: inline-block;
-    border-radius: $radius-button-border;
-    padding: $spacing-small $spacing-small-alt;
-    text-transform: uppercase;
-    font-size: $font-size-small;
-    font-weight: $font-weight-bold;
-
-    &:active {
-        @include shadow-button-active;
-        transform: translateY(1px);
-    }
-
-    &:hover {
-        background-color: get-hover-color($background-color);
-    }
-
-    &:focus {
-        @include outline-button($background-color);
-    }
-}
-
-%transparent-button-like-link {
-    border: 0;
-    background-color: transparent;
-    cursor: pointer;
-    padding: $spacing-small $spacing-small-alt;
-    text-transform: uppercase;
-    color: $color-text;
-    font-family: inherit;
-    font-size: $font-size-small;
-    font-weight: $font-weight-bold;
-
-    &:active {
-        transform: translateY(1px);
-    }
-}
-
-@mixin transparent-button-like-link($color) {
-    @extend %transparent-button-like-link;
-    display: inline-block;
-    color: $color;
-}
-
-%background-alternating-row {
-    @include background-color($color-background-row);
-
-    &:nth-child(odd) {
-        @include background-color($color-background-row-alt);
     }
 }
