--- a/client/src/views/Dashboard/Summary/styles.scss
+++ b/client/src/views/Dashboard/Summary/styles.scss
@@ -1,5 +1,3 @@
-@import '~base-scss/base';
-
 .summary {
     display: flex;
     flex-direction: column;
@@ -8,27 +6,27 @@
 
     .tooltip {
         .value {
-            font-family: $font-family-monospace;
+            font-family: var(--font-family-monospace);
         }
     }
 
     .info {
         display: inline-block;
-        border-bottom: $width-separator-thin solid $color-separator;
-        background-color: $color-background-header;
-        padding: $spacing-medium-alt $spacing-medium;
+        border-bottom: var(--width-separator-thin) solid var(--color-separator);
+        background-color: var(--color-background-header);
+        padding: var(--spacing-medium-alt) var(--spacing-medium);
         line-height: 1.3;
-        color: $color-text-label;
-        font-size: $font-size-medium-alt;
+        color: var(--color-text-label);
+        font-size: var(--font-size-medium-alt);
         font-style: italic;
 
         .info-icon {
-            padding-right: $spacing-small;
-            color: $color-info;
+            padding-right: var(--spacing-small);
+            color: var(--color-info);
         }
 
         .date {
-            padding: 0 $spacing-smaller;
+            padding: 0 var(--spacing-smaller);
 
             &:last-child :after {
                 content: '.';
@@ -37,14 +35,14 @@
     }
 
     .item {
-        padding: $spacing-medium-alt $spacing-small;
+        padding: var(--spacing-medium-alt) var(--spacing-small);
         width: 100%;
 
         h3 {
-            padding: $spacing-small $spacing-medium;
+            padding: var(--spacing-small) var(--spacing-medium);
             text-transform: capitalize;
-            color: $color-accent;
-            font-weight: $font-weight-bold;
+            color: var(--color-accent);
+            font-weight: var(--font-weight-bold);
         }
 
         .table {
@@ -62,24 +60,24 @@
             }
 
             .viz {
-                margin-left: -$spacing-medium;
+                margin-left: -var(--spacing-medium);
                 width: 180px;
             }
 
             .success {
-                color: $color-success;
+                color: var(--color-success);
             }
 
             .warning {
-                color: $color-warning;
+                color: var(--color-warning);
             }
 
             .danger {
-                color: $color-danger;
+                color: var(--color-danger);
             }
 
             .bold {
-                font-weight: $font-weight-bold;
+                font-weight: var(--font-weight-bold);
             }
         }
     }
