--- a/client/src/views/Dashboard/SummaryContainer/styles.scss
+++ b/client/src/views/Dashboard/SummaryContainer/styles.scss
@@ -1,21 +1,20 @@
-@import '~base-scss/base';
-
 .summary-container {
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow-y: auto;
 
     .header {
         flex-shrink: 0;
     }
 
     .container {
+        flex-grow: 1;
         height: 100%;
+        overflow-y: auto;
     }
 
     .tabs {
-        flex-wrap: wrap;
-
         .tab {
             flex-grow: 1;
         }
