--- a/client/src/views/Dashboard/SummaryContainer/styles.scss
+++ b/client/src/views/Dashboard/SummaryContainer/styles.scss
@@ -5,18 +5,22 @@
     overflow-y: auto;
 
     .header {
-        flex-shrink: 0;
-    }
+        .top-container {
+            display: flex;
+            align-items: center;
+            flex-shrink: 0;
+            padding: 0 var(--spacing-medium);
 
-    .container {
-        flex-grow: 1;
-        height: 100%;
-        overflow-y: auto;
-    }
+            .heading {
+                flex-shrink: 0;
+                margin-right: var(--spacing-medium);
+                text-transform: initial;
+                font-weight: var(--font-weight-bold);
+            }
 
-    .tabs {
-        .tab {
-            flex-grow: 1;
+            .summary-list {
+                flex-grow: 1;
+            }
         }
     }
 }
