Add Server Test
* Add import test documents
* Add codeclimate config
* Add coverge config
* Using alpine image for client

--- a/client/src/components/KeyValue/styles.scss
+++ b/client/src/components/KeyValue/styles.scss
@@ -26,7 +26,7 @@
         }
 
         .percent-value {
-            opacity: 0.6;
+            opacity: .6;
             font-size: var(--font-size-small-alt);
         }
     }
