--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -37,8 +37,7 @@
                 padding-top: var(--spacing-large);
                 text-transform: capitalize;
                 text-decoration: none;
-                line-height: 0.9;
-                color: inherit;
+                line-height: .9;
                 color: var(--color-accent);
                 font-family: inherit;
                 font-size: var(--font-size-extra-large);
@@ -69,7 +68,7 @@
                 cursor: pointer;
                 text-transform: capitalize;
                 text-decoration: none;
-                line-height: 0.9;
+                line-height: .9;
                 color: inherit;
                 font-family: inherit;
                 font-size: var(--font-size-extra-large);
