--- a/client/src/components/Navbar/styles.scss
+++ b/client/src/components/Navbar/styles.scss
@@ -25,7 +25,7 @@
             cursor: pointer;
             text-transform: capitalize;
             text-decoration: none;
-            line-height: 0.9;
+            line-height: .9;
             color: inherit;
             font-family: inherit;
             font-size: var(--font-size-large-alt);
