--- a/client/src/views/Dashboard/Summary/styles.scss
+++ b/client/src/views/Dashboard/Summary/styles.scss
@@ -28,7 +28,7 @@
         .date {
             padding: 0 var(--spacing-smaller);
 
-            &:last-child :after {
+            &:last-child ::after {
                 content: '.';
             }
         }
