Add Health and Nutrition in summary
* Refactor report page
* Properly memoize transformation functions

--- a/client/src/views/Dashboard/SummaryContainer/styles.scss
+++ b/client/src/views/Dashboard/SummaryContainer/styles.scss
@@ -20,6 +20,13 @@
 
             .summary-list {
                 flex-grow: 1;
+                font-size: var(--font-size-large);
+
+                :global {
+                    input {
+                        text-transform: capitalize;
+                    }
+                }
             }
         }
     }
