--- a/client/src/components/KeyValue/styles.scss
+++ b/client/src/components/KeyValue/styles.scss
@@ -1,6 +1,5 @@
 .item {
     display: table-row;
-    border-bottom: var(--width-separator-thin) solid var(--color-separator);
 
     .title {
         display: table-cell;
@@ -30,5 +29,9 @@
             opacity: 0.6;
             font-size: var(--font-size-small-alt);
         }
+    }
+
+    &:hover {
+        background-color: var(--color-background-accent-hint);
     }
 }
