Add soi trend to project

--- a/client/src/views/Dashboard/SummaryContainer/TrendSummary/styles.scss
+++ b/client/src/views/Dashboard/SummaryContainer/TrendSummary/styles.scss
@@ -1,6 +1,8 @@
 .trend {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+
     .item {
         display: flex;
         flex-direction: column;
